# datasketches-rust

./: .asf.yaml  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  licenserc.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml
.github/: semantic.yml
.github/workflows/: ci.yml
datasketches/: Cargo.toml
datasketches/src/: error.rs  lib.rs
datasketches/src/bloom/: builder.rs  mod.rs  sketch.rs
datasketches/src/codec/: decode.rs  encode.rs  family.rs  mod.rs
datasketches/src/common/: binomial_bounds.rs  inv_pow2_table.rs  mod.rs  num_std_dev.rs  resize.rs
datasketches/src/countmin/: mod.rs  serialization.rs  sketch.rs
datasketches/src/cpc/: compression.rs  compression_data.rs  estimator.rs  kxp_byte_lookup.rs  mod.rs  pair_table.rs  sketch.rs  union.rs
datasketches/src/frequencies/: serialization.rs  sketch.rs
datasketches/src/hash/: mod.rs  murmurhash.rs
datasketches/src/hash_value/: canonical_float.rs  mod.rs  natural_extend.rs  raw_bytes.rs  sign_extend.rs  value.rs
datasketches/src/hll/: array4.rs  array6.rs  array8.rs  aux_map.rs  composite_interpolation.rs  container.rs  coupon_mapping.rs  cubic_interpolation.rs  estimator.rs  harmonic_numbers.rs  hash_set.rs  list.rs  mod.rs  mode.rs  serialization.rs  sketch.rs  union.rs
datasketches/src/tdigest/: serialization.rs  sketch.rs
datasketches/src/theta/: bit_pack.rs  hash_table.rs  sketch.rs
datasketches/tests/: .gitignore  countmin_test.rs  cpc_serialization_test.rs  cpc_union_test.rs  cpc_update_test.rs  frequencies_update_test.rs  hll_serialization_test.rs  hll_union_test.rs  hll_update_test.rs  tdigest_serialization_test.rs  tdigest_test.rs  theta_sketch_test.rs
examples/: Cargo.toml
examples/src/: hll_update.rs
src/: lib.rs
src/hll/: array4.rs  aux_map.rs  estimator.rs  sketch.rs  union.rs
src/tdigest/: mod.rs  sketch.rs
tests/: common.rs  hll_serialization_test.rs  hll_union_test.rs  hll_update_test.rs  tdigest_serialization_test.rs  tdigest_test.rs
tools/: generate_serialization_test_data.py
xtask/: Cargo.toml
xtask/src/: main.rs
