# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datasketches"
version = "0.1.0"

edition = "2024"
rust-version = "1.85.0"

categories = ["data-structures", "algorithms"]
description = "A software library of stochastic streaming algorithms (a.k.a. sketches)"
homepage = "https://datasketches.apache.org"
keywords = ["sketch", "hyperloglog", "probabilistic"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/apache/datasketches-rust"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
byteorder = { version = "1.5.0" }
mur3 = { version = "0.1.0" }

[dev-dependencies]
googletest = { version = "0.14.2" }

[lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
too_many_arguments = "allow"
