# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = ["datasketches", "examples", "xtask"]
resolver = "3"

[workspace.package]
edition = "2024"
homepage = "https://datasketches.apache.org"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/apache/datasketches-rust"
rust-version = "1.85.0"

[workspace.dependencies]
# Workspace dependencies
datasketches = { path = "datasketches" }

# Crates.io dependencies
clap = { version = "4.5.20", features = ["derive"] }
insta = { version = "1.46.1" }
googletest = { version = "0.14.2" }
rand = { version = "0.9.2" }
which = { version = "8.0.0" }

[workspace.lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"

too_many_arguments = "allow"
needless_range_loop = "allow"
